<resources>
    <string name="app_name">Appointment Management</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="appointment">APPOINTMENT</string>
    <string name="management">Management</string>

    <string name="create_appointment">Create Appointment</string>
    <string name="view_edit_appointments">View/Edit\nAppointment</string>
    <string name="delete_appointment">Delete\nAppointment</string>
    <string name="move_appointment">Move\nAppointment</string>
    <string name="search">Search</string>

    <string name="title_appointment">Appointment Title</string>
    <string name="search_text">Search Appointment</string>
    <string name="detail_appointment">Appointment Details</string>
    <string name="time">Time</string>

    <string name="delete_popup_title">Please select an option to delete appointments.</string>
    <string name="delete_appointments">Delete all appointments\nfor selected date</string>
    <string name="select_appointments">Select appointment\nto delete</string>

    <string name="select_text">Please select the date you wish to move the appointment</string>

</resources>
