<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    style="@style/Theme_Dialog"
    android:padding="15dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/appointmentTitleUpdateTxt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/title_appointment"
                android:inputType="text" />

            <EditText
                android:id="@+id/appointmentTimeUpdateTxt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/time"
                android:inputType="time" />

            <EditText
                android:id="@+id/appointmentDetailUpdateTxt"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:hint="@string/detail_appointment"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/updateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colourCreateAppointment"
                android:text="Update"
                android:textColor="@color/colourWhite" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
